--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "netflix-clone",
-  "homepage": "https://SauravMukherjee44.github.io/Netflix-Clone",
+  "homepage": "https://sauravmukherjee44.github.io/Netflix-Clone/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
